refactor: removida lógica redundante na validação de arquivos
Simplificada a regular expression para validação de nomes de arquivos, removendo suporte a extensões e pontos. Melhorada a legibilidade no código e adicionados contextos adicionais às mensagens de erro.